[package]
name = "rnote-compression-benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = { version = "6.0" }
flate2 = { version = "1.0" }
itertools = { version = "0.13" }
plotters = { version = "0.3" }
sysinfo = { version = "0.31" }
zstd = { version = "0.13" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
debug = false
