[package]
name = "rnote-compression-benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
brotli = { version = "6.0" }
flate2 = { version = "1.0" }
gzp = { version = "0.11" }
itertools = { version = "0.13" }
plotters = { version = "0.3" }
sysinfo = { version = "0.31" }
zstd = { version = "0.13", features = ["zstdmt"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
debug = false
